--- a/src/main/CSS/home-screen-style.css
+++ b/src/main/CSS/home-screen-style.css
@@ -17,9 +17,21 @@
     -fx-background-color: #F5F5F5;
 }
 
+/*---------------------------------Hyperlink---------------------*/
+.hyperlink {
+    -fx-text-fill: black;
+}
+
+.split-pane:vertical .split-pane-divider {
+    -fx-background-color: #0099FF;
+    -fx-padding: 1;
+    -fx-background-insets: 0 20 0 20;
+}
+
 
 /*---------------------------------Table Column Alignment---------------------*/
-#colEditionId, #colPrice, #colRegion, #colLanguage, #colPlatform, #colKind, #colEdition, #colDefaultForSale   {
+#colEditionId, #colPrice, #colRegion, #colLanguage, #colPlatform, #colKind, #colEdition, #colDefaultForSale,
+#col_A_EditionName, #col_A_PriceDollar, #col_A_PriceToman, #col_U_EditionName,#col_U_PriceDollar,#col_U_PriceToman{
     -fx-alignment: Center;
 }
 
@@ -49,7 +61,7 @@
 }
 
 .table-row-cell{
-    -fx-pref-heightheight: 40d;
+    -fx-pref-heightheight: 40;
 }
 
 
@@ -82,14 +94,14 @@
 }
 
 .table-view .column-header .label {
-     -fx-text-fill : #707070;
-     -fx-padding : 5 0 5 0 ;
+    -fx-text-fill : #707070;
+    -fx-padding : 5 0 5 0 ;
 
- }
+}
 
 .table-view .column-header .label .text {
 
-    -fx-font-size: 14;
+    -fx-font-size: 15;
     -fx-font-weight: bold;
     /*-fx-font-family: "IRANSans Black" !Important;*/
 
@@ -99,9 +111,9 @@
     -fx-background-color : #949494;
 }
 
-.table-view .column-header:last-visible {
-    -fx-border-width: 0 2 0 1;
-}
+/*.table-view .column-header:last-visible {*/
+    /*-fx-border-width: 0 2 0 1;*/
+/*}*/
 
 .table-view .column-header-background{
     -fx-border-width : 0 0.0 1 0;
